test/negative/struct_none_assign.mut
# ERROR: cannot assign None to a struct (value types are not nullable)
struct Point
    x: i64
    y: i64
end

p: Point = None
